syntax = "proto3";

package alert;

option go_package = "github.com/valensto/grpc-poc/internal/alert";

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";

service AlertService {
  rpc SendAlert(Alert) returns (google.protobuf.Empty) {}
  rpc SyncAlerts(SyncAlertsRequest) returns (stream Alert) {}
}

message SyncAlertsRequest {
  string project_id = 1;
  string session_id = 2;
}

enum AlertStatus {
  OK = 0;
  WARNING = 1;
  CRITICAL = 2;
};

message Alert {
  string project_id = 1;
  string sensor_id = 2;
  AlertStatus status = 3;
  string message = 4;
}